fix(List): fixing checkbox alignment issues (#1636)

--- a/packages/components/src/List/Toolbar/SelectAll/SelectAll.scss
+++ b/packages/components/src/List/Toolbar/SelectAll/SelectAll.scss
@@ -2,5 +2,6 @@
 	:global(label) {
 		margin-bottom: 0;
 		margin-left: 5px;
+		line-height: 1.3rem;
 	}
 }
